--- a/codenameGOD/game.project
+++ b/codenameGOD/game.project
@@ -16,3 +16,7 @@ dependencies = https://github.com/subsoap/defos/archive/master.zip
 [physics]
 debug = 0
 
+[graphics]
+default_texture_mag_filter = nearest
+default_texture_min_filter = nearest
+
